update tab on scroll

--- a/index.html
+++ b/index.html
@@ -54,28 +54,28 @@
           <li>
             <a
               href="#about"
-              class="text-sm font-semibold hover:text-highlight"
+              class="about-tab tab text-sm font-semibold hover:text-highlight"
               data-i18n="about"
             ></a>
           </li>
           <li>
             <a
               href="#"
-              class="text-sm font-semibold hover:text-highlight"
+              class="tech-tab tab text-sm font-semibold hover:text-highlight"
               data-i18n="tech"
             ></a>
           </li>
           <li>
             <a
               href="#"
-              class="text-sm font-semibold hover:text-highlight"
+              class="project-tab tab text-sm font-semibold hover:text-highlight"
               data-i18n="project"
             ></a>
           </li>
           <li>
             <a
               href="#"
-              class="text-sm font-semibold hover:text-highlight"
+              class="contact-tab tab text-sm font-semibold hover:text-highlight"
               data-i18n="contact"
             ></a>
           </li>
@@ -171,28 +171,28 @@
           <li class="pb-2">
             <a
               href="#about"
-              class="menu-item text-sm font-semibold hover:text-highlight"
+              class="about-tab menu-item tab text-sm font-semibold hover:text-highlight"
               data-i18n="about"
             ></a>
           </li>
           <li class="pb-2">
             <a
               href="#"
-              class="menu-item text-sm font-semibold hover:text-highlight"
+              class="tech-tab menu-item tab text-sm font-semibold hover:text-highlight"
               data-i18n="tech"
             ></a>
           </li>
           <li class="pb-2">
             <a
               href="#"
-              class="menu-item text-sm font-semibold hover:text-highlight"
+              class="project-tab menu-item tab text-sm font-semibold hover:text-highlight"
               data-i18n="project"
             ></a>
           </li>
           <li class="pb-1">
             <a
               href="#"
-              class="menu-item text-sm font-semibold hover:text-highlight"
+              class="contact-tab menu-item tab text-sm font-semibold hover:text-highlight"
               data-i18n="contact"
             ></a>
           </li>
@@ -201,12 +201,13 @@
       </div>
       <!-- main -->
       <main
-        class="p-4 dark:bg-main-dark dark:text-white px-5 xs:px-10 md:px-20 lg:px-30 xl:px-40"
+        id="main"
+        class="p-4 dark:bg-main-dark dark:text-white px-5 xs:px-10 md:px-20 lg:px-30 xl:px-40 2xl:px-70"
       >
         <!-- intro -->
         <section
           id="intro"
-          class="h-[calc(100lvh-85px)] mb-10 flex flex-col sm:flex-row justify-center items-center sm:justify-between"
+          class="section h-[calc(100lvh-85px)] mb-10 flex flex-col sm:flex-row justify-center items-center sm:justify-between"
         >
           <div class="text-center">
             <div class="overflow-hidden mb-2">
@@ -369,7 +370,7 @@
         <!-- about -->
         <section
           id="about"
-          class="h-100lvh md:h-[calc(100lvh-85px)] pt-[50px] mb-10 flex flex-col sm:flex-row justify-center sm:items-start sm:justify-between gap-8"
+          class="section h-100lvh md:h-[calc(100lvh-85px)] pt-[50px] mb-10 flex flex-col sm:flex-row justify-center sm:items-start sm:justify-between gap-8"
         >
           <div class="sm:max-w-[50%] sm:mb-0">
             <h2 class="mb-8 font-semibold text-2xl" data-i18n="aboutTitle"></h2>
