--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
           </li>
           <li>
             <a
-              href="#"
+              href="#project"
               class="project-tab tab text-sm font-semibold hover:text-highlight"
               data-i18n="project"
             ></a>
           </li>
           <li>
             <a
-              href="#"
+              href="#contact"
               class="contact-tab tab text-sm font-semibold hover:text-highlight"
               data-i18n="contact"
             ></a>
@@ -170,14 +170,14 @@
           </li>
           <li class="pb-2">
             <a
-              href="#"
+              href="#project"
               class="project-tab menu-item tab text-sm font-semibold hover:text-highlight"
               data-i18n="project"
             ></a>
           </li>
           <li class="pb-1">
             <a
-              href="#"
+              href="#contact"
               class="contact-tab menu-item tab text-sm font-semibold hover:text-highlight"
               data-i18n="contact"
             ></a>
@@ -354,10 +354,7 @@
           </div>
         </section>
         <!-- about -->
-        <section
-          id="about"
-          class="section h-100lvh md:h-[calc(100lvh-85px)] pt-[50px] mb-10"
-        >
+        <section id="about" class="section pt-[100px] mb-10">
           <div
             class="flex flex-col sm:flex-row justify-center sm:items-start sm:justify-between gap-8"
           >
@@ -409,8 +406,8 @@
                     class="absolute -left-1.5 w-[15px] h-[15px] bg-highlight rounded-full"
                   ></div>
                   <div class="ml-6 -translate-y-1">
-                    <p class="text-gray-600 text-sm">2022 ~ Present</p>
-                    <h3>Computer Science (University of the People)</h3>
+                    <p class="text-gray-600 text-sm" data-i18n="uopDate"></p>
+                    <h3 data-i18n="uopDescription"></h3>
                   </div>
                 </div>
                 <div id="timeline-item-2" class="mb-6 relative opacity-0">
@@ -418,8 +415,8 @@
                     class="absolute -left-1.5 w-[15px] h-[15px] bg-highlight rounded-full"
                   ></div>
                   <div class="ml-6 -translate-y-1">
-                    <p class="text-gray-600 text-sm">2022</p>
-                    <h3>Passed ITPEC (Fundamental Engineering)</h3>
+                    <p class="text-gray-600 text-sm" data-i18n="feDate"></p>
+                    <h3 data-i18n="feDate"></h3>
                   </div>
                 </div>
                 <div id="timeline-item-3" class="mb-6 relative opacity-0">
@@ -427,8 +424,8 @@
                     class="absolute -left-1.5 w-[15px] h-[15px] bg-highlight rounded-full"
                   ></div>
                   <div class="ml-6 -translate-y-1">
-                    <p class="text-gray-600 text-sm">2023</p>
-                    <h3>Passed JLPT N3</h3>
+                    <p class="text-gray-600 text-sm" data-i18n="jlptDate"></p>
+                    <h3 data-i18n="jlptDescription"></h3>
                   </div>
                 </div>
                 <div id="timeline-item-4" class="mb-6 relative opacity-0">
@@ -436,15 +433,15 @@
                     class="absolute -left-1.5 w-[15px] h-[15px] bg-highlight rounded-full"
                   ></div>
                   <div class="ml-6 -translate-y-1">
-                    <p class="text-gray-600 text-sm">2024 ~ Present</p>
-                    <h3>English (Dagon University)</h3>
+                    <p class="text-gray-600 text-sm" data-i18n="dagonDate"></p>
+                    <h3 data-i18n="dagonDescription"></h3>
                   </div>
                 </div>
               </div>
             </div>
           </div>
           <!-- tech stack marquee -->
-          <div class="mt-5 overflow-hidden w-full text-highlight">
+          <div class="mt-8 overflow-hidden w-full text-highlight">
             <div class="marquee-wrapper">
               <div class="marquee-item item1">
                 <div class="flex items-center">
@@ -626,8 +623,9 @@
                     <path
                       fill="#D4EEF1"
                       d="M46.1 89.9c-.9-1.3-1.8-2.8-2.5-4.3-2.5.7-5.5 1.2-8.9 1.4 2.3 1.2 5.7 2.4 11.4 2.9z"
-                    /></svg
-                  ><span class="pl-10">Docker</span>
+                    />
+                  </svg>
+                  <span class="pl-10">Docker</span>
                 </div>
               </div>
               <div class="marquee-item item6">
@@ -642,8 +640,9 @@
                       data-name="original"
                       fill="#007acc"
                       d="M1.5 63.91v62.5h125v-125H1.5zm100.73-5a15.56 15.56 0 017.82 4.5 20.58 20.58 0 013 4c0 .16-5.4 3.81-8.69 5.85-.12.08-.6-.44-1.13-1.23a7.09 7.09 0 00-5.87-3.53c-3.79-.26-6.23 1.73-6.21 5a4.58 4.58 0 00.54 2.34c.83 1.73 2.38 2.76 7.24 4.86 8.95 3.85 12.78 6.39 15.16 10 2.66 4 3.25 10.46 1.45 15.24-2 5.2-6.9 8.73-13.83 9.9a38.32 38.32 0 01-9.52-.1 23 23 0 01-12.72-6.63c-1.15-1.27-3.39-4.58-3.25-4.82a9.34 9.34 0 011.15-.73L82 101l3.59-2.08.75 1.11a16.78 16.78 0 004.74 4.54c4 2.1 9.46 1.81 12.16-.62a5.43 5.43 0 00.69-6.92c-1-1.39-3-2.56-8.59-5-6.45-2.78-9.23-4.5-11.77-7.24a16.48 16.48 0 01-3.43-6.25 25 25 0 01-.22-8c1.33-6.23 6-10.58 12.82-11.87a31.66 31.66 0 019.49.26zm-29.34 5.24v5.12H56.66v46.23H45.15V69.26H28.88v-5a49.19 49.19 0 01.12-5.17C29.08 59 39 59 51 59h21.83z"
-                    /></svg
-                  ><span class="pl-10">Typescript</span>
+                    />
+                  </svg>
+                  <span class="pl-10">Typescript</span>
                 </div>
               </div>
               <div class="marquee-item item7">
@@ -663,6 +662,158 @@
               </div>
             </div>
           </div>
+        </section>
+        <!-- project -->
+        <section id="project" class="section pt-[100px] mb-10">
+          <h2
+            class="mb-8 font-semibold text-2xl text-center"
+            data-i18n="projectTitle"
+          ></h2>
+          <div class="grid grid-cols-1 xs:grid-cols-2 lg:grid-cols-3 gap-10">
+            <!-- kenja cloud -->
+            <div class="card opacity-0 translate-y-[25px]">
+              <div
+                class="h-full flex flex-col justify-between rounded-xl overflow-hidden shadow-highlight hover:translate-y-[-10px]"
+              >
+                <div>
+                  <img
+                    src="/images/kenja_cloud.png"
+                    alt="Kenja Cloud"
+                    class="w-full h-40 object-cover hover:scale-110"
+                  />
+                  <div class="p-4">
+                    <div class="flex justify-between items-center mb-2">
+                      <h3 class="text-md text-highlight font-semibold">
+                        Kenja Cloud
+                      </h3>
+                      <a
+                        href="https://satt.jp/product/kenja-cloud/"
+                        class="px-1 py-2 bg-highlight text-white rounded-full text-xs scale-90 hover:scale-100"
+                        title="Visit to Kenja Cloud official website"
+                        target="_blank"
+                        rel="noreferrer"
+                        >Visit</a
+                      >
+                    </div>
+
+                    <p
+                      class="text-sm mb-2"
+                      data-i18n="kenjaCloudDescription"
+                    ></p>
+                  </div>
+                </div>
+                <div class="flex gap-2 p-4 pt-0">
+                  <span
+                    class="px-2 py-1 text-xs bg-secondary-light text-highlight rounded-full"
+                    >Vue</span
+                  >
+                  <span
+                    class="px-2 py-1 text-xs bg-secondary-light text-highlight rounded-full"
+                    >Nuxt</span
+                  >
+                  <span
+                    class="px-2 py-1 text-xs bg-secondary-light text-highlight rounded-full"
+                    >Laravel</span
+                  >
+                </div>
+              </div>
+            </div>
+            <!-- poddy -->
+            <div class="card opacity-0 translate-y-[25px]">
+              <div
+                class="h-full flex flex-col justify-between rounded-xl overflow-hidden shadow-highlight hover:translate-y-[-10px]"
+              >
+                <div>
+                  <img
+                    src="/images/poddy.png"
+                    alt="Poddy"
+                    class="w-full h-40 object-cover hover:scale-110"
+                  />
+                  <div class="p-4">
+                    <div class="flex justify-between items-center mb-2">
+                      <h3 class="text-md text-highlight font-semibold">
+                        Poddy
+                      </h3>
+                      <a
+                        href="https://satt.jp/product/kenja-cloud/"
+                        class="px-1 py-2 bg-highlight text-white rounded-full text-xs scale-90 hover:scale-100"
+                        title="Visit to Poddy official website"
+                        target="_blank"
+                        rel="noreferrer"
+                        >Visit</a
+                      >
+                    </div>
+                    <p class="text-sm" data-i18n="poddyDescription"></p>
+                  </div>
+                </div>
+                <div class="flex gap-2 p-4 pt-0">
+                  <span
+                    class="px-2 py-1 text-xs bg-secondary-light text-highlight rounded-full"
+                    >Vue</span
+                  >
+                  <span
+                    class="px-2 py-1 text-xs bg-secondary-light text-highlight rounded-full"
+                    >Nuxt</span
+                  >
+                  <span
+                    class="px-2 py-1 text-xs bg-secondary-light text-highlight rounded-full"
+                    >Laravel</span
+                  >
+                  <span
+                    class="px-2 py-1 text-xs bg-secondary-light text-highlight rounded-full"
+                    >GSAP</span
+                  >
+                </div>
+              </div>
+            </div>
+            <!-- la payy -->
+            <div class="card opacity-0 translate-y-[25px]">
+              <div
+                class="h-full flex flex-col justify-between rounded-xl overflow-hidden shadow-highlight hover:translate-y-[-10px]"
+              >
+                <div>
+                  <img
+                    src="/images/la_payy.png"
+                    alt="La Payy"
+                    class="w-full h-40 object-cover hover:scale-110"
+                  />
+                  <div class="p-4">
+                    <div class="flex justify-between items-center mb-2">
+                      <h3 class="text-md text-highlight font-semibold">
+                        La Payy
+                      </h3>
+                      <a
+                        href="https://satt.jp/product/kenja-cloud/"
+                        class="px-1 py-2 bg-highlight text-white rounded-full text-xs scale-90 hover:scale-100"
+                        title="Visit to La Payy official website"
+                        target="_blank"
+                        rel="noreferrer"
+                        >Visit</a
+                      >
+                    </div>
+                    <p class="text-sm" data-i18n="laPayyDescription"></p>
+                  </div>
+                </div>
+                <div class="flex gap-2 p-4 pt-0">
+                  <span
+                    class="px-2 py-1 text-xs bg-secondary-light text-highlight rounded-full"
+                    >Laravel</span
+                  >
+                  <span
+                    class="px-2 py-1 text-xs bg-secondary-light text-highlight rounded-full"
+                    >Socket.io</span
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- contact -->
+        <section id="contact" class="section pt-[100px] mb-10">
+          <h2
+            class="mb-8 font-semibold text-2xl text-center"
+            data-i18n="contactTitle"
+          ></h2>
         </section>
       </main>
     </div>
